# Fresh-Start

./: .gitignore  AI_PROTOCOL.md  AI_STAFF_MEETING_PLAN.md  Build-Exe.ps1  HANDOFF_CLAUDE_CODE.md  IMPLEMENTATION_PLAN_2026.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v0.2.0.md  SCOPE.md  SESSION_2_COMPLETE.md  SESSION_HANDOFF.md  Start-Studio.ps1  TASK_LIST.md  TODAY_EXECUTION_PLAN.md  evaluation_report.md  lint-report.txt  master-orchestrator-minimal.ps1  package-lock.json  package.json  setup-scheduled-tasks.ps1  tsconfig.json  tsconfig.tsbuildinfo
.agent/workflows/: make-it-better.md
.claude/: settings.local.json
data/: content-tracker.json
desktop-app/: main.js  package-lock.json  package.json
docs/: PRIMARY_PLAN.md
luxrig-bridge/: .env  package-lock.json  package.json  server.js  test_output_npm.txt
luxrig-bridge/services/: agents-revenue.js  agents.js  database.js  lmstudio.js  ollama.js
poe-canvas/: .gitignore  AI_FEATURES_PROGRESS.md  AI_PROTOCOL.md  CHANGELOG.md  GEMINI_ENHANCEMENT_PLAN.md  HANDOFF_GEMINI3.md  HANDOFF_GEMINI3_GOOGLE.md  HANDOFF_QUARTET.md  OPTIMIZATION_PLAN.md  README.md  bridge.js  electron-builder.json  package-lock.json  package.json  vite.config.js
poe-canvas/archive/: BUILD_PLAN_PHASE2.md  CONSOLIDATION_ANALYSIS.md  HANDOFF_ANTIGRAVITY.md  HANDOFF_CLAUDE_CODE.md  NEXT_STEPS.md  (+5 more)
poe-canvas/src-tauri/: Cargo.toml  tauri.conf.json
poe-canvas/src-tauri/src/: main.rs
tests/: verify_phase1.ps1
website/: DEPLOY.md  index.html
website-v2/: dev.db  lint_output.txt  package-lock.json  package.json
(+102 files in other folders)
